--- a/app/globals.scss
+++ b/app/globals.scss
@@ -160,4 +160,15 @@
   }
 }
 
+.toc {
+  margin: 20px 0;
+}
 
+.toc ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.toc li {
+  margin: 5px 0;
+}
