--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,30 +4,30 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
+    --background: 0,0%,11.4%;
+    --foreground: 0 0% 98%;
+    --card: 0,0%,11.4%;
+    --card-foreground: 0 0% 98%;
+    --popover: 0,0%,11.4%;
+    --popover-foreground: 0 0% 98%;
     --primary: 24.6,95%,53.1%;
     --primary-foreground: 355.7 100% 99%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 45%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 72% 51%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 24.6,95%,53.1%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 221.2 83.2% 53.3%;
     --chart-1: 347 77% 50%;
-    --chart-2: 352 83% 91%;
+    --chart-2: 349 77% 62%;
     --chart-3: 350 80% 72%;
     --chart-4: 351 83% 82%;
-    --chart-5: 349 77% 62%;
+    --chart-5: 352 83% 91%;
   }
 
   .dark {
