fix: update selection background color in code-theme stylesheet

--- a/app/code-theme.scss
+++ b/app/code-theme.scss
@@ -29,7 +29,7 @@ html.dark {
   pre[class*="language-"]::mozselection,
   code[class*="language-"]::mozselection {
     text-shadow: none;
-    background: #234879;
+    background: #ffa333;
   }
   @media print {
     pre[class*="language-"],
