fix: update background and text colors in code-theme stylesheet

--- a/app/code-theme.scss
+++ b/app/code-theme.scss
@@ -49,7 +49,7 @@ html.dark {
     padding: 0.1em 0.3em;
     border-radius: 0.3em;
     color: #c9d1d9;
-    background: #343942;
+    background: #ffaf4d;
   }
   /* Line highlighting */
   pre[data-line] {
@@ -144,7 +144,7 @@ html.light {
   /* General */
   pre[class*="language-"],
   code[class*="language-"] {
-    color: #24292f;
+    color: #ffcc00;
     font-size: 13px;
     text-shadow: none;
     direction: ltr;
