--- a/app/code-theme.scss
+++ b/app/code-theme.scss
@@ -164,8 +164,8 @@ html.light {
   }
   pre[class*="language-"]::selection,
   code[class*="language-"]::selection,
-  pre[class*="language-"]::mozselection,
-  code[class*="language-"]::mozselection {
+  pre[class*="language-"]::-moz-selection,
+  code[class*="language-"]::-moz-selection {
     text-shadow: none;
     background: #9fc6e9;
   }
